Opened 18 years ago
Closed 16 years ago
#134 closed bug (fixed)
[SoundRecorder] doesn't start
Reported by: | diver | Owned by: | korli |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/SoundRecorder | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
Sondrecorder doesn't start if no media_server running with error (Unknows Media Kit Error), althouh R5's Soundrecorder under Haiku without media_server.
Change History (15)
comment:1 by , 18 years ago
Summary: | Sondrecorder doesn't start → Soundrecorder doesn't start |
---|
comment:2 by , 18 years ago
comment:3 by , 18 years ago
Resolution: | → wontfix |
---|
comment:4 by , 18 years ago
This isn't a bug. Current feature set of SoundRecorder makes it impossible to start without a media_server connection. It should however complain with a clear error message "Cannot connect to media server" (tested on R5 with Haiku SoundRecorder).
comment:5 by , 18 years ago
Status: | new → closed |
---|
comment:6 by , 18 years ago
bug_group: | → developers |
---|
comment:7 by , 17 years ago
Platform: | → All |
---|---|
Resolution: | invalid |
Status: | closed → reopened |
Oh, well "Cannot connect to media server" would be nice, please add it. Reopening it for now.
comment:8 by , 17 years ago
Description: | modified (diff) |
---|
I tested and with no media server it tells : "Cannot connect to media server : System failure. [80004100]". Don't you get this popup when using SoundRecorder on Haiku ?
comment:9 by , 17 years ago
Summary: | Soundrecorder doesn't start → SoundRecorder doesn't start |
---|
I get "Cannot connect to media server : General system error. [ffffffff]" which IMHO is not the right error message for the end user. I would like to see "No audio hardware detected" (this is from R5's MediaPlayer i think) or something like that (which will explain why this error) as it's far more informative, and i could guess that my audio card is not detected (no driver). Could you change the error message please, then i would insist on closing this bug! ;-)
comment:10 by , 16 years ago
Component: | - Applications → - Applications/SoundRecorder |
---|
Set to the proper component.
comment:12 by , 16 years ago
depends, strerror(int error_code) are used to translate the error. I think that we should fix this on the OS not only on this application, but I don't know if this are a bug anymore as we don't report "Unknows Media Kit Error".
comment:14 by , 16 years ago
Summary: | SoundRecorder doesn't start → [SoundRecorder] doesn't start |
---|
Sorry, i mean Soundrecorder.