* BMediaRoster::GetAudio*() should return B_NAME_NOT_FOUND when nothing is set * In this case, SoundRecorder shows a different error message, more informative, confer bug #134

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28303 a95241bf-73f2-0310-859d-f6bbb57e9c96